mesh/ffi/include/library/mesh-ffi-levels.h

void eap_mesh_cpp_levels_initialize(eap_mesh_cpp_levels_t *levels,
                                    eap_mesh_cpp_levels_opts const *options);
void eap_mesh_cpp_levels_initialize_level1(eap_mesh_cpp_levels_t *levels);
void eap_mesh_cpp_levels_build_pack(eap_mesh_cpp_levels_t *levels,
                                    eap_mesh_cpp_cells_t const *cells);
void eap_mesh_cpp_levels_build_top(eap_mesh_cpp_levels_t *levels,
                                   eap_mesh_cpp_cells_t const *cells);
void eap_mesh_cpp_levels_reset_mothers_and_daughters(eap_mesh_cpp_levels_t *levels,
                                                     eap_mesh_cpp_cells_t const *cells);
void eap_mesh_cpp_levels_reset_mothers_and_daughters_new(eap_mesh_cpp_levels_t *levels,
                                                         eap_mesh_cpp_cells_t const *cells,
                                                         eap_local_t new_cells);
typedef struct eap_mesh_cpp_levels_setup_all_top_fields {
    abi_ndarray_t all_top;
} eap_mesh_cpp_levels_setup_all_top_fields;
void eap_mesh_cpp_levels_setup_all_top(eap_mesh_cpp_levels_t *levels,
                                       eap_mesh_cpp_cells_t const *cells,
                                       eap_mesh_cpp_levels_setup_all_top_fields *fields);
typedef struct eap_mesh_cpp_levels_resize_local_fields {
    abi_ndarray_t cell_daughter;
    abi_ndarray_t cell_mother;
    abi_ndarray_t ltop;
    abi_ndarray_t cell_level;
    abi_ndarray_t flag;
    abi_ndarray_t flag_tag;
} eap_mesh_cpp_levels_resize_local_fields;
void eap_mesh_cpp_levels_resize_local(eap_mesh_cpp_levels_t *levels,
                                      eap_local_t num_cells,
                                      eap_local_t newsize,
                                      eap_mesh_cpp_levels_resize_local_fields *fields);