mesh/fortran/src/mesh-levels.F90

#include "abi-fortran_interop-f.h"

module mesh_levels
  use, intrinsic :: iso_c_binding
  use, intrinsic :: iso_fortran_env

  use abi, only : nd_array_t, from_nd_array, to_nd_array
  use comm_types, only : ct_int32, ct_double
  use mesh_cells, only : cpp_cells_t
  use mesh_core_types, only : loc_val_t, to_nd_array_lv

  implicit none
  private

  public :: new_cpp_levels

  !=================================================================================================
  !=================================================================================================
  !===
  !===
  !===  WHEN REMOVING LEGACY MESH CODE, CHANGE THE FOLLOWING HERE:
  !===
  !===  - rename cpp_levels_t to levels_t (and don't make it a derived type)
  !===  - rename all fields from cpp_* to just *
  !===  - rename all functions/occurrances of eap_mesh_cpp_levels to eap_mesh_levels
  !===  - rename all occurrances of cpp_levels to levels in macros
  !===
  !===
  !=================================================================================================
  !=================================================================================================

  type, public :: cpp_levels_t
    integer, dimension(:), pointer :: &
      cell_level => null() ! levels_t::cell_level

    real(REAL64), dimension(:), pointer :: &
      area => null(), & ! levels_t::area
      gdxx => null(), & ! levels_t::gdxx
      dxyzmn => null(), & ! levels_t::dxyzmn
      dtsize => null() ! levels_t::dtsize

    real(REAL64), dimension(:,:), pointer :: &
      sides => null(), & ! levels_t::sides
      sizes => null(), & ! levels_t::sizes
      gsizes => null() ! levels_t::gsizes

    integer, dimension(:), pointer :: levelmx => null() ! levels_t::levelmx

    integer, dimension(:), pointer :: flag => null() ! levels_t::flag
    integer, dimension(:), pointer :: flag_tag => null() ! levels_t::flag_tag
    integer, dimension(:), pointer :: amr_tag => null() ! levels_t::amr_tag

    integer :: numtop ! levels_t::numtop
    integer :: allnumtop = 0 ! levels_t::allnumtop

    integer(INT64) :: sum_numtop ! levels_t::sum_numtop

    integer :: chunk_count ! levels_t::chunk_count
    real(REAL64) :: average_run_length ! levels_t::average_run_length
    integer, dimension(:), pointer :: &
      chunk_start => null(), & ! levels_t::chunk_start
      chunk_end => null(), & ! levels_t::chunk_end
      chunk_ids => null() ! levels_t::chunk_ids

    integer :: &
      numpack, & ! levels_t::numpack
      max_numpack ! levels_t::max_numpack

    integer(INT64), dimension(:), pointer :: &
      cell_mother, & ! levels_t::cell_mother
      cell_daughter ! levels_t::cell_daughter

    integer, dimension(:), pointer :: &
      ltop => null(), & ! levels_t::ltop
      alltop => null() ! levels_t::alltop

    ! Internal pointer to eap_mesh_cpp_levels_t
    type(c_ptr), private :: ptr = c_null_ptr
  contains
    procedure :: free => FREE(mesh,cpp_levels)
    procedure :: is_associated => IS_ASSOCIATED(mesh,cpp_levels)

    procedure :: initialize => cpp_levels_t_initialize ! levels_t::init
    procedure :: initialize_level1 => &
      cpp_levels_t_initialize_level1 ! levels_t::initialize_level1

    procedure :: build_pack => cpp_levels_t_build_pack ! levels_t::bldpck
    procedure :: build_top => cpp_levels_t_build_top ! levels_t::bldtop

    procedure :: ltop_nv => cpp_levels_t_ltop_nv ! levels_t::ltop_nv
    procedure :: alltop_nv => cpp_levels_t_alltop_nv ! levels_t::alltop_nv

    ! levels_t::reset_mothers_and_daughters
    procedure :: reset_mothers_and_daughters => &
      cpp_levels_t_reset_mothers_and_daughters
    ! levels_t::reset_mothers_and_daughters_new
    procedure :: reset_mothers_and_daughters_new => &
      cpp_levels_t_reset_mothers_and_daughters_new

    procedure :: setup_alltop => &
      cpp_levels_t_setup_alltop ! levels_t::setup_alltop

    procedure :: cell_mother_set => &
      cpp_levels_t_cell_mother_set ! levels_t::cell_mother_set
    procedure :: cell_daughter_set => &
      cpp_levels_t_cell_daughter_set ! levels_t::cell_daughter_set

    procedure :: levelmx_set => &
      cpp_levels_t_levelmx_set ! levels_t::levelmx_set
    procedure :: setall_levelmx => &
      cpp_levels_t_setall_levelmx ! levels_t::setall_levelmx

    procedure :: resize_local => cpp_levels_t_resize_local ! levels_t::resize
    ! TODO: levels_t::clone

    procedure :: recon_move => cpp_levels_t_recon_move ! levels_t::recon_move

    procedure :: foreach_at_level => &
      cpp_levels_t_foreach_at_level ! levels_t::foreach_at_level
    procedure :: map_at_level => &
      cpp_levels_t_map_at_level ! levels_t::map_at_level
    procedure :: filter_at_level => &
      cpp_levels_t_filter_at_level ! levels_t::filter_at_level
    procedure :: collect_at_level => &
      cpp_levels_t_collect_at_level ! levels_t::collect_at_level
    procedure :: clear_at_level => &
      cpp_levels_t_clear_at_level ! levels_t::clear_at_level
    procedure :: num_at_level => &
      cpp_levels_t_num_at_level ! levels_t::num_at_level

    procedure :: recon_pack => cpp_levels_t_recon_pack ! levels_t::recpack

    procedure :: set_flags => cpp_levels_t_set_flags ! levels_t::set_flags
    procedure :: set_flags_scalar => &
      cpp_levels_t_set_flags_scalar ! levels_t::set_flags_const
    procedure :: set_flags_all => &
      cpp_levels_t_set_flags_all ! levels_t::set_flags_all
    procedure :: set_flags_scalar_when => &
      cpp_levels_t_set_flags_scalar_when ! levels_t::set_flags_when_const
    procedure :: set_flags_scalar_from_list => &
      cpp_levels_t_set_flags_scalar_from_list ! levels_t::set_flags_from_list_const
    procedure :: set_flags_scalar_and_tags_from_list => &
      cpp_levels_t_set_flags_scalar_and_tags_from_list ! levels_t::set_flags_from_list_const
    procedure :: set_flags_from_tuples => &
      cpp_levels_t_set_flags_from_tuples ! levels_t::set_flags_from_tuples
    procedure :: set_flag_tags_from_tuples => &
      cpp_levels_t_set_flag_tags_from_tuples ! levels_t::set_flag_tags_from_tuples
    procedure :: set_flags_from_tuples_key_and_scalar => &
      cpp_levels_t_set_flags_from_tuples_key_and_scalar ! levels_t::set_flags_from_tuples_key_const
    procedure :: set_flag_tags_from_tuples_key_and_scalar => &
      cpp_levels_t_set_flag_tags_from_tuples_key_and_scalar ! levels_t::set_flag_tags_from_tuples_key_const

    procedure :: mom_kid_build => &
      cpp_levels_t_mom_kid_build ! levels_t::mom_kid_build
    procedure :: mom_kid_free => &
      cpp_levels_t_mom_kid_free ! levels_t::mom_kid_free
    procedure :: kid_mom_build => &
      cpp_levels_t_kid_mom_build ! levels_t::kid_mom_build
    procedure :: mom_kids_build => &
      cpp_levels_t_mom_kids_build ! levels_t::mom_kids_build

    procedure :: check_lohipack_and_levels => &
      cpp_levels_t_check_lohipack_and_levels ! levels_t::check_lohipack_and_levels
    ! TODO: levels_t::update_cell_index
    ! TODO: levels_t::check

    procedure :: recon_div_parent => &
      cpp_levels_t_recon_div_parent ! levels_t::recon_div_parent
    procedure :: recon_div_child => &
      cpp_levels_t_recon_div_child ! levels_t::recon_div_child

    procedure :: clear_daughter => &
      cpp_levels_t_clear_daughter ! levels_t::clear_daughter

    generic :: kid_get => &
      cpp_levels_t_kid_get_i32, & ! levels_t::kid_get_i4
      cpp_levels_t_kid_get_r64 ! levels_t::kid_get_r8

    procedure, private :: &
      cpp_levels_t_kid_get_i32, &
      cpp_levels_t_kid_get_r64

    generic :: kid_put => &
      cpp_levels_t_kid_put_i32, & ! levels_t::kid_put_i4
      cpp_levels_t_kid_put_r64, & ! levels_t::kid_put_r8
      cpp_levels_t_kid_put_r64_2d ! levels_t::kid_put_r8_v

    procedure, private :: &
      cpp_levels_t_kid_put_i32, &
      cpp_levels_t_kid_put_r64, &
      cpp_levels_t_kid_put_r64_2d

    generic :: kid_put_inv => &
      cpp_levels_t_kid_put_inv_r64_2d ! levels_t::kid_put_inv

    procedure, private :: &
      cpp_levels_t_kid_put_inv_r64_2d

    generic :: mom_get => &
      cpp_levels_t_mom_get_r64 ! levels_t::mom_get_r8

    procedure, private :: &
      cpp_levels_t_mom_get_r64

    procedure :: set_num_pack => &
      cpp_levels_t_set_num_pack ! levels_t::set_numpack_i
    procedure :: set_level_max_from_tuples => &
      cpp_levels_t_set_level_max_from_tuples ! levels_t::set_levelmx_from_tuples
    ! TODO: levels_t::set_amr_tags_from_rmlist

    procedure :: apply_dzns => cpp_levels_t_apply_dzns
  end type cpp_levels_t

  type, public, bind(C) :: cpp_levels_options_t
    integer(c_int8_t) :: num_dim
    real(c_double) :: cell_size(3)
    logical(c_bool) :: kid_mom_use_s2s
    logical(c_bool) :: mom_kid_use_s2s
    logical(c_bool) :: mom_kids_use_s2s
  end type cpp_levels_options_t

  type, bind(C) :: eap_mesh_cpp_levels_resize_local_fields
    type(nd_array_t) :: &
      cell_daughter, &
      cell_mother, &
      ltop, &
      cell_level, &
      flag, &
      flag_tag
  end type eap_mesh_cpp_levels_resize_local_fields

  type, bind(C) :: eap_mesh_cpp_levels_setup_all_top_fields
    type(nd_array_t) :: &
      all_top
  end type eap_mesh_cpp_levels_setup_all_top_fields

  interface
    ! bindings to C functions
    ! IMPORTANT: NO SPACE AFTER COMMA
    FC_INTEROP_CONSTRUCTOR(mesh,cpp_levels)
    FC_INTEROP_DESTRUCTOR(mesh,cpp_levels)

    subroutine eap_mesh_cpp_levels_initialize(levs, opts) &
      bind(C,name="eap_mesh_cpp_levels_initialize")
      use, intrinsic :: iso_c_binding
      import cpp_levels_options_t

      type(c_ptr), value :: levs
      type(cpp_levels_options_t), intent(in) :: opts
    end subroutine eap_mesh_cpp_levels_initialize

    subroutine eap_mesh_cpp_levels_initialize_level1(levs) &
      bind(C,name="eap_mesh_cpp_levels_initialize_level1")
      use, intrinsic :: iso_c_binding

      type(c_ptr), value :: levs
    end subroutine eap_mesh_cpp_levels_initialize_level1

    subroutine eap_mesh_cpp_levels_build_pack(levs, cells) &
      bind(C,name="eap_mesh_cpp_levels_build_pack")
      use, intrinsic :: iso_c_binding

      type(c_ptr), value :: levs, cells
    end subroutine eap_mesh_cpp_levels_build_pack

    subroutine eap_mesh_cpp_levels_build_top(levs, cells) &
      bind(C,name="eap_mesh_cpp_levels_build_top")
      use, intrinsic :: iso_c_binding

      type(c_ptr), value :: levs, cells
    end subroutine eap_mesh_cpp_levels_build_top

    subroutine eap_mesh_cpp_levels_reset_mothers_and_daughters(levs, cells) &
      bind(C,name="eap_mesh_cpp_levels_reset_mothers_and_daughters")
      use, intrinsic :: iso_c_binding

      type(c_ptr), value :: levs, cells
    end subroutine eap_mesh_cpp_levels_reset_mothers_and_daughters

    subroutine eap_mesh_cpp_levels_reset_mothers_and_daughters_new(&
      levs, cells, new_cells &
    ) bind(C,name="eap_mesh_cpp_levels_reset_mothers_and_daughters_new")
      use, intrinsic :: iso_c_binding

      type(c_ptr), value :: levs, cells
      integer(c_int32_t), value :: new_cells
    end subroutine eap_mesh_cpp_levels_reset_mothers_and_daughters_new

    subroutine eap_mesh_cpp_levels_setup_all_top(levs, cells, fields) &
      bind(C,name="eap_mesh_cpp_levels_setup_all_top")
      use, intrinsic :: iso_c_binding
      import

      type(c_ptr), value :: levs, cells
      type(eap_mesh_cpp_levels_setup_all_top_fields), intent(inout) :: fields
    end subroutine eap_mesh_cpp_levels_setup_all_top

    subroutine eap_mesh_cpp_levels_resize_local(&
      levs, num_cells, newsize, fields &
    ) bind(C,name="eap_mesh_cpp_levels_resize_local")
      use, intrinsic :: iso_c_binding
      import

      type(c_ptr), value :: levs
      integer(c_int32_t), value :: num_cells
      integer(c_int32_t), value :: newsize
      type(eap_mesh_cpp_levels_resize_local_fields), intent(inout) :: fields
    end subroutine eap_mesh_cpp_levels_resize_local
